# anthropic-api-101

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 001_requests.ipynb  002_system_prompt.ipynb  003_temperature.ipynb  004_streaming.ipynb  005_controlling_output.ipynb  006_prompt_evals.ipynb  007_prompt_techniques.ipynb  008_tools.ipynb  009_tool_streaming.ipynb  011_chunking.ipynb  012_vectordb.ipynb  013_bm25.ipynb  014_hybrid.ipynb  015_thinking.ipynb  016_images.ipynb  017_citations.ipynb  018_caching.ipynb  019_code_execution.ipynb  churn_analysis_report.txt  dataset.json  dataset_athlete_meal_plan.json  output.html  output.json  output_athlete_meal_plan.html  output_athlete_meal_plan.json
