[project]
name = "anthropic-api-101"
version = "0.1.0"
description = "Working through the Anthropic 'Claude with the Anthropic API' Skilljar course."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
